# python-todo-app

./: .gitignore  README.md  flake.nix  pyrightconfig.json
.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: init_db.py  main.py
backend/src/api/v1/endpoints/: TaskRouter.py
backend/src/api/v1/schemas/: TaskSchema.py
backend/src/domain/entities/: Task.py
backend/src/domain/ports/: TaskRepositoryPort.py
backend/src/domain/usecases/: ChangeTaskUseCase.py  CreateTaskUseCase.py  DeleteTaskUseCase.py  GetAllTasksUseCase.py
backend/src/infrastructure/database/: InitializeSession.py
backend/src/infrastructure/database/models/: TaskModel.py
backend/src/infrastructure/repository/: TaskRepository.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/config/: env.ts
frontend/features/tasks/: types.ts
frontend/features/tasks/api/: core.ts  task.ts
frontend/features/tasks/components/: DeleteTask.tsx  FilterTasks.tsx  SearchTasks.tsx  TaskCard.tsx  TaskEditorDrawer.tsx  TaskFormData.tsx  TaskSkeleton.tsx
frontend/features/tasks/hooks/: tasksMutations.ts
frontend/features/tasks/hooks/tasks/mutations/: tasksMutations.ts
frontend/features/tasks/hooks/tasks/query/: tasksQuery.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/utils/: providers.tsx
